# oriol-personal-theme

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
src/oriol_personal_theme/: __init__.py  layout.html  theme.conf
src/oriol_personal_theme/ablog/: catalog.html  collection.html  postcard.html  postcard2.html  taxonomy-index.html
src/oriol_personal_theme/components/: matomo.html  utterances.html
src/oriol_personal_theme/sections/: header-article.html
src/oriol_personal_theme/static/css/: style.css
