[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oriol-personal-theme"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Oriol Abril Pla", email = "oriol.abril.pla@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]
dependencies = [
  "pydata-sphinx-theme @ git+https://github.com/pydata/pydata-sphinx-theme",
]

[project.optional-dependencies]
ablog = [ "ablog>=0.11" ]

[tool.flit.module]
name = "oriol_personal_theme"

[project.entry-points."sphinx.html_themes"]
oriol_personal_theme = "oriol_personal_theme"

[project.urls]
source = "https://github.com/OriolAbril/oriol-personal-theme"
tracker = "https://github.com/OriolAbril/oriol-personal-theme/issues"
documentation = "https://oriolabrilpla.cat"

[tool.isort]
profile = "black"
