[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oriol-personal-theme"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Oriol Abril Pla", email = "oriol.abril.pla@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version", "description"]
dependencies = [
  "pydata-sphinx-theme==0.16.1",
]

[project.optional-dependencies]
ablog = [ "ablog>=0.11" ]

[tool.flit.module]
name = "oriol_personal_theme"

[project.entry-points."sphinx.html_themes"]
oriol_personal_theme = "oriol_personal_theme"

[project.urls]
source = "https://github.com/OriolAbril/oriol-personal-theme"
tracker = "https://github.com/OriolAbril/oriol-personal-theme/issues"
documentation = "https://oriolabrilpla.cat"

[tool.isort]
profile = "black"
